--- a/config/settings.yml
+++ b/config/settings.yml
@@ -11,7 +11,12 @@ app:
     sessions_controller:
       remember_1: "1"
       remember_0: "0"
+    users_controller:
+      perpage: 10
   integration:
     users_login_test:
       remember_1: "1"
       remember_0: "0"
+  users:
+    _user:
+      sizeofgravatar: 50
