--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 #   gem install sqlite3
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+#   gem "sqlite3"
 #
 default: &default
   adapter: sqlite3
@@ -23,3 +23,9 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+production:
+  <<: *default
+  database: sample_app_production
+  username: sample_app
+  password: <%= ENV["SAMPLE_APP_DATABASE_PASSWORD"] %>
